--- a/#src/pug/pages/services/video/video-redaction.pug
+++ b/#src/pug/pages/services/video/video-redaction.pug
@@ -16,5 +16,7 @@ block main-content
 		include ../../../section/video/section-redaction
 	section.main-content__offer.gradient-neon-color
 		include ../../../chunks/offer
+	section.main-content__showreel
+		include ../../../chunks/showreel-slide
 	section.main-content__footer
 		include ../../../layouts/footer
