--- a/#src/pug/section/video/section-recording.pug
+++ b/#src/pug/section/video/section-recording.pug
@@ -12,11 +12,11 @@
 							h2 Основные типы видеосъемки
 							p 
 								+iconfont('camera-film', '_icon') 
-								| Видеосъемка&nbsp;- это &nbsp;важный инструмент для&nbsp;создания качественных видеороликов. Каждый тип съемки имеет свои особенности и&bsp;позволяет достичь определенных целей. Давайте разберемся, какие типы видеосъемки существуют и&nbsp;почему они важны для&nbsp;вашего бизнеса.
+								| Видеосъемка&nbsp;- это &nbsp;важный инструмент для&nbsp;создания качественных видеороликов. Каждый тип съемки имеет свои особенности и&bsp;позволяет достичь определенных целей. Давайте разберемся, какие&nbsp;типы видеосъемки существуют и&nbsp;почему они важны для&nbsp;вашего бизнеса.
 							h2 Репортажная видеосъемка 
 							p 
 								+iconfont('camera-film', '_icon')
-								| Репортажная съемка позволяет запечатлеть реальные эмоции и моменты. Она подходит для создания новостных сюжетов, отчетов о мероприятиях, презентациях и других событий. Этот тип съемки помогает создать прямое и интуитивное взаимодействие между зрителем и контентом.
+								| Репортажная съемка позволяет запечатлеть реальные эмоции и&nbsp;моменты. Она&nbsp;подходит для&nbsp;создания новостных сюжетов, отчетов о&nbsp;мероприятиях, презентациях и&nbsp;других событий. Этот тип съемки помогает создать прямое и&nbsp;интуитивное взаимодействие между зрителем и&nbsp;контентом.
 							h2 Постановочная видеосъемка 
 							p 
 								+iconfont('camera-film', '_icon')
@@ -24,7 +24,7 @@
 							h2 Музыкальные клипы 
 							p 
 								+iconfont('camera-film', '_icon')
-								| Музыкальные клипы часто являются очень динамичными и&nbsp;зрелищными видео, которые визуально сопровождают музыкальную композицию. Этот тип съемки может быть довольно экспериментальным и&nbsp;оригинальным. Он&nbsp;помогает создать настроение и&nbsp;эмоции, которые поддерживаются музыкой.
+								| Музыкальные клипы часто являются очень динамичными и&nbsp;зрелищными видео, которые визуально сопровождают музыкальную композицию. Этот&nbsp;тип съемки может быть довольно экспериментальным и&nbsp;оригинальным. Он&nbsp;помогает создать настроение и&nbsp;эмоции, которые поддерживаются музыкой.
 							h2 Рекламный ролик 
 							p 
 								+iconfont('camera-film', '_icon')
@@ -35,4 +35,37 @@
 								| Корпоративная видеосъемка может включать в&nbsp;себя различные типы видео, такие как&nbsp;промо-ролики, презентационные видео, обучающие ролики, отчеты о&nbsp;мероприятиях и&nbsp;т.д. Каждый тип видеосъемки форматом корпоративной видеосъемки является фильм, который рассказывает о&nbsp;компании или&nbsp;продукте и&nbsp;показывает его&nbsp;преимущества. 
 							p 
 								+iconfont('camera-film', '_icon')
-								| Основное отличие корпоративной видеосъемки от&nbsp;репортажной заключается в&nbsp;акценте на&nbsp;эстетической части. Сцены, диалоги, закадровый текст и&nbsp;графика тщательно подбираются и&nbsp;согласовываются с&nbsp;заказчиком, чтобы&nbsp;продемонстрировать компанию с&nbsp;наилучшей стороны. Также в&nbsp;корпоративной видеосъемке более&nbsp;важна эстетическая составляющая, чем информационная. С&nbsp;помощью корпоративной видеосъемки вы&nbsp;можете привлечь новых клиентов, рассказать о&nbsp;новой продукции и &nbsp;поднять настроение работникам. 
+								| Основное отличие корпоративной видеосъемки от&nbsp;репортажной заключается в&nbsp;акценте на&nbsp;эстетической части. Сцены, диалоги, закадровый текст и&nbsp;графика тщательно подбираются и&nbsp;согласовываются с&nbsp;заказчиком, чтобы&nbsp;продемонстрировать компанию с&nbsp;наилучшей стороны. Также в&nbsp;корпоративной видеосъемке более&nbsp;важна эстетическая составляющая, чем информационная. С&nbsp;помощью корпоративной видеосъемки вы&nbsp;можете привлечь новых клиентов, рассказать о&nbsp;новой продукции и &nbsp;поднять настроение работникам.
+	._column
+		._body 
+			._content._container
+				._description
+					._row
+						._row-col
+							h3 Стоимость съемки и монтажа видео
+							ul 
+								li
+									+iconfont('clapper', '_icon') 
+									p Съемка короткометражного фильма (1-2&nbsp;дня) - 
+										span от&nbsp;100&nbsp;000&nbsp;рублей 
+										|&ensp;и&nbsp;выше
+								li
+									+iconfont('clapper', '_icon') 
+									p Съемка интервью (полдня) - 
+										span от&nbsp;15&nbsp;000&nbsp;рублей
+								li
+									+iconfont('clapper', '_icon') 
+									p Съемка рекламного ролика (1&nbsp;день) - 
+										span 
+											| от&nbsp;10&nbsp;000&nbsp;рублей
+								li
+									+iconfont('clapper', '_icon') 
+									p Монтаж короткого видеоролика (1&nbsp;-&nbsp;2&nbsp;минуты) - 
+										span от&nbsp;10&nbsp;000&nbsp;рублей
+								li
+									+iconfont('clapper', '_icon') 
+									p Монтаж длинного видео (более&nbsp;10&nbsp;минут) - 
+										span от&nbsp;30&nbsp;000&nbsp;рублей
+								li
+									+iconfont('clapper', '_icon') 
+									p Монтаж видео с&nbsp;сложной анимацией и&nbsp;спецэффектами: цена обсуждается индивидуально и&nbsp;может быть значительно выше
