--- a/#src/scss/assets/_swiper.scss
+++ b/#src/scss/assets/_swiper.scss
@@ -44,7 +44,7 @@
 	align-items: center;
 	box-sizing: content-box;
 	width: 100%;
-	height: 100%;
+	// height: 100%;
 	transition-timing-function: var(
 		--swiper-wrapper-transition-timing-function,
 		initial
