--- a/#src/pug/section/sound/section-sound-design.pug
+++ b/#src/pug/section/sound/section-sound-design.pug
@@ -9,4 +9,41 @@
 				._description
 					._row
 						._row-col 
+							h2 Как звук взаимодействует с картинкой?
+							h3 
+								span Есть несколько базовых правил, которые стоит учитывать:
+							ul 
+								li 
+								+iconfont('check', '_icon')
+								|Звук должен подчеркивать происходящее на&nbsp;экране и&nbsp;эмоционально соответствовать действию. Например, во&nbsp;время сражений играет эпичная или&nbsp;напряженная музыка, а&nbsp;во&nbsp;время юмористических сценок&nbsp;— что-то&nbsp;легкое и&nbsp;игривое. Саунд-дизайнер следит за&nbsp;тем, чтобы&nbsp;звуковое сопровождение было единым. Конечно, из&nbsp;этого правила бывают исключения, и&nbsp;единую стилистику можно нарушать, если&nbsp;это осмысленный ход создателя, как&nbsp;в&nbsp;фильме Забавные игры&quot;
+								li 
+								+iconfont('check', '_icon')
+								| Семейная пара с&nbsp;маленьким сыном едет в&nbsp;свой богатый дом на&nbsp;озере, где&nbsp;их всех берут в&nbsp;заложники. Во&nbsp;вступительной сцене создается ощущение идиллии, люди мило болтают, играет классическая музыка. Внезапно включается страшный и&nbsp;очень агрессивный метал, диссонансное звучание которого моментально выбивает зрителя из&nbsp;зоны комфорта и&nbsp;дает понять, что&nbsp;дальше будет что-то&nbsp;жуткое.
+								li 
+								+iconfont('check', '_icon')
+								| Важно не&nbsp;только само звучание звуков, но&nbsp;и&nbsp;правильная настройка их&nbsp;громкости относительно друг друга. Звуки должны существовать в&nbsp;иерархии. Представьте сцену в&nbsp;вертолете, где шум от&nbsp;техники заглушает голоса людей, поэтому тем приходится говорить громче обычного. Если&nbsp;записывать звук в&nbsp;настоящем вертолете, то&nbsp;актерам автоматически придется повышать голос, а&nbsp;вот при&nbsp;озвучке соотношение громкостей зависит только от&nbsp;саунд-дизайнера. Его задача в&nbsp;этом случае не&nbsp;подобрать настройки так, чтобы&nbsp;транспорт оказался абсолютно бесшумным, а&nbsp;герои спокойно беседовали. 
+						._row-col 
+							h2 Над чем конкретно работает саунд&nbsp;-&nbsp;дизайнер?
 							p 
+								+iconfont('hand-pointer', '_icon')
+								| Есть понятие &quot;звуковые слои&quot;, которое описывает разные категории звуков.
+							p 
+								+iconfont('hand-pointer', '_icon')
+								| Атмосферы&nbsp;- это&nbsp;фоновые шумы, например, звуки природы, города, ветер и&nbsp;воздух.
+							p 
+								+iconfont('hand-pointer', '_icon')
+								| Синхронные шумы&nbsp;- звуки одежды, рук, предметов обихода и&nbsp;шагов. Обычно их&nbsp;записывают в&nbsp;студии, а&nbsp;затем монтируют и&nbsp;сводят с&nbsp;другими элементами фонограммы.
+							p 
+								+iconfont('hand-pointer', '_icon')
+								| Речь может быть внутрикадровой (реплики персонажей), закадровой (речь диктора) или&nbsp;интершум, или&nbsp;&quot;гур-гур&quot;&nbsp;- множество разговоров в&nbsp;одном помещении, которые сливаются в&nbsp;один поток.
+							p 
+								+iconfont('hand-pointer', '_icon')
+								| Эффекты&nbsp;- это&nbsp;все звуки окружения, которые не&nbsp;являются синхронными шумами. Sfx&nbsp;придумывает саунд-дизайнер. Это&nbsp;могут быть звуки космических кораблей или&nbsp;фантастических существ. Hfx берутся из&nbsp;реального мира, например, звуки выстрелов, автомобилей или&nbsp;дверей.
+							p 
+								+iconfont('hand-pointer', '_icon')
+								| Музыка может быть внутрикадровой, которая играет в&nbsp;самой сцене фильма или&nbsp;спектакля из&nbsp;винилового проигрывателя, радиоприемника или&nbsp;другого источника, и&nbsp;закадровой, которую слышат только зрители и&nbsp;которая существует вне&nbsp;действия героев. Закадровую музыку может написать композитор фильма или&nbsp;ее можно подобрать из&nbsp;уже существующих песен.
+					._row
+						._row-col 
+							h2 Цены на саунд-дизайн:
+							p Одна минута звукового дизайна&nbsp;– <span>от&nbsp;4&nbsp;500&nbsp;руб.</span> 
+							p Саунд-дизайн&nbsp;— это создание звуковых эффектов для&nbsp;кино, рекламы, игр и&nbsp;других проектов. Одна из&nbsp;его ключевых особенностей заключается в&nbsp;том, что&nbsp;он приукрашивает происходящее на&nbsp;видео. Звуки, которые записывает камера, обычно не&nbsp;такие яркие и&nbsp;эпичные, как&nbsp;того требуют законы драматургии. Поэтому саунд-дизайнер озвучивает необходимые моменты так, чтобы зритель был полностью погружен в&nbsp;происходящее.
